Closes #6, #7 - Lógica botão e preços

--- a/css/quantity.css
+++ b/css/quantity.css
@@ -7,6 +7,14 @@
     
 }
 
+.minus {
+    width: 30px;
+}
+
+.plus {
+    width: 30px;
+}
+
 .quantity .input-text.qty {
     width: 35px;
     height: 39px;
