--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body {
-    background-color: rgb(224, 224, 224);
-    text-align: center;
+    background-color: rgb(255, 238, 238);
+    text-align: left;
     font-size: 20px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
@@ -11,7 +11,6 @@ input {
     width: 800px;
     height: 70px;
     margin-bottom: 20px;
-
 }
 
 h2 {
@@ -20,57 +19,66 @@ h2 {
     text-align: center;
 }
 
-button
-{
+button {
     background-color: rgb(0, 110, 255);
     border: none;
     width: 1010px;
-    height: 200px;
+    height: 60px;
     border-radius: 4px;
     color: white;
     font-size: 20px;
 }
 
+label {
+    text-align: center;
+}
+
+button:hover {
+    background-color: #37448e;
+}
+
 img {
     height: 300px;
     justify-items: auto;
-
 }
 
 
-.container{
-        width: 1000px;
-        height: 1900px;
-        background-color: #ffffff;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        margin: auto;
-        padding: 30px;
-        border-radius: 4px;
-        box-shadow: 0px 0px 9px 3px rgba(0,0,0,0.2);
-        gap: 20px;
+.container {
+    width: 1000px;
+    height: auto;
+    background-color: #ffffff;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+    padding: 30px;
+    border-radius: 4px;
+    box-shadow: 0px 0px 9px 3px rgba(0, 0, 0, 0.2);
+    gap: 20px;
+}
+
+.output {
+    text-align: left;
+    align-items: flex-end;
+    margin-left: -200px;
 }
 
 .sub-container {
     width: 1000px;
-    height: 500px;
+    height: auto;
     background-color: #f0efef;
     display: flex;
     align-items: center;
     flex-direction: column;
-
     margin: auto;
     padding: 1px;
     border-radius: 4px;
-    box-shadow: 0px 0px 9px 2px rgba(0,0,0,0.2);
+    box-shadow: 0px 0px 9px 2px rgba(0, 0, 0, 0.2);
     padding-bottom: 30px;
 }
 
-
-
-.dados-container {
+.data-container {
     width: 1000px;
     height: 300px;
     background-color: #f0efef;
@@ -81,7 +89,7 @@ img {
     margin: auto;
     padding: 1px;
     border-radius: 4px;
-    box-shadow: 0px 0px 9px 2px rgba(0,0,0,0.2);
+    box-shadow: 0px 0px 9px 2px rgba(0, 0, 0, 0.2);
     margin-top: 5px;
 }
 
@@ -92,43 +100,32 @@ img {
     flex-direction: row;
     align-items: center;
     margin: auto;
-  
-
 }
 
 
 .container-image {
     background-color: #eeeeee;
-    box-shadow: 0px 0px 9px 2px rgba(0,0,0,0.5);
-     display: flex;
+    box-shadow: 0px 0px 9px 2px rgba(0, 0, 0, 0.5);
+    display: flex;
     flex-direction: column;
     padding: 10px;
     margin: 10px;
-
-
-       
 }
 
 
 .image {
-    
-    
-    background-color: #2e1d1d;
+    background-color: #ffebeb;
     display: flex;
     flex-direction: column;
-    
-
 }
 
+.products-price {
+    color: green;
+    font-size: 20px;
+    font-weight: bold;
+    text-align: center;
+}
 
-
-
-
-
-
-
-
-
-
-
-
+.output {
+    text-align:left;
+}
